--- a/package.json
+++ b/package.json
@@ -3,19 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.100",
+    "@mui/material": "^5.10.6",
+    "@react-icons/all-files": "^4.1.0",
     "@react-three/drei": "^9.31.1",
     "@react-three/fiber": "^8.7.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippy.js/react": "^3.1.1",
     "body-parser": "^1.20.0",
+    "emailjs-com": "^3.2.0",
+    "next": "^12.3.1",
+    "next-images": "^1.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
+    "react-hook-form": "^7.36.1",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-starfield-animation": "^1.0.1",
+    "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.2.21",
     "react-typical": "^0.1.3",
+    "react-vertical-timeline-component": "^3.5.2",
     "three": "^0.144.0",
+    "tippy.js": "^6.3.7",
     "typed-js": "^0.2.3",
     "typed.js": "^2.0.12",
     "web-vitals": "^2.1.4"
