--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-tooltip": "^4.2.21",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.5.2",
+    "sass": "^1.55.0",
     "three": "^0.144.0",
     "tippy.js": "^6.3.7",
     "typed-js": "^0.2.3",
