--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.6",
     "@react-icons/all-files": "^4.1.0",
+    "@react-pdf/renderer": "^3.0.0",
     "@react-three/drei": "^9.31.1",
     "@react-three/fiber": "^8.7.4",
     "@testing-library/jest-dom": "^5.16.5",
